# backend/Modules/Loan/Server.Loan.EndPoints/Loan/Submit/PersonalInfo.cs
@@ -1,4 +1,4 @@
 ﻿namespace Server.Loan.EndPoints.Loan.Submit
 {
-    public record PersonalInfo(string FullName, string Email, DateOnly DateOfBirth);
+    public record PersonalInfo(string FullName, string Email, DateTime DateOfBirth);
 }
